--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <h2>Репозиторий загружет на ГИТ</h2>
+    <h2>Репозиторий загружет на ГИТ.</h2>
     <h3>Тестовый заголовок</h3>
-    
+
+
 </body>
 </html>
